# nullFS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  driversign.cer  nullFS.sln  nullFS.sln.DotSettings  vcpkg.json
driver/: cleanup.c  close.c  common.h  create.c  debug.h  devctrl.c  dispatchRoutines.h  driver.cpp  driver.vcxproj  driver.vcxproj.filters  flowControl.h  fsctrl.c  ioctl.h  names.h  nullfs.c  nullfs.cpp  nullfs.h  nullfs.inf  nullfs.rc  resource.h  struct.h  support.c  support.h
sharedCode/: Path.cpp  Path.h  Service.cpp  Service.h  sharedCode.vcxproj  sharedCode.vcxproj.filters
src/driver/: CMakeLists.txt  GlobalData.cpp  GlobalData.h  cacheManager.cpp  cacheManager.h  cleanup.c  cleanup.cpp  close.c  close.cpp  common.h  cpp.hint  create.c  create.cpp  debug.h  devctrl.c  devctrl.cpp  dispatchRoutines.h  driver.vcxproj  driver.vcxproj.filters  flowControl.h  fsctrl.c  fsctrl.cpp  nodeType.h  nullfs.c  nullfs.cpp  nullfs.inf  pch.h  pnp.cpp  pooltags.h  shutdown.cpp  struct.cpp  struct.h  support.c  support.cpp  support.h  traceLogging.cpp  traceLogging.h
src/include/nullFS/: ioctl.h  names.h
test/googlemock/: googlemock.vcxproj  googlemock.vcxproj.filters
test/googletest/: googletest.vcxproj  googletest.vcxproj.filters
test/integrationTests/: CMakeLists.txt  CreateTestDisk.cpp  CreateTestDisk.h  DebugOutputTestEventListener.cpp  DebugOutputTestEventListener.h  InstallTestDriver.cpp  InstallTestDriver.h  Service.cpp  Service.h  StartTestDriver.cpp  StartTestDriver.h  TestDriver.cpp  TestDriver.h  VirtualDisk.cpp  VirtualDisk.h  controlDeviceObjectTests.cpp  integrationTests.cpp  integrationTests.vcxproj  integrationTests.vcxproj.filters  nullFsDriverEnvironment.cpp  nullFsDriverEnvironment.h  pathTests.cpp  pch.h
test/integrationTests.old/: InstallTestDriver.cpp  InstallTestDriver.h  NullFsDriverEnvironment.h  StartTestDriver.cpp  StartTestDriver.h  controlDeviceObjectTests.cpp  integrationTests.cpp
test/scripts/: updateTestVm.ps1
test/sharedTestCode/: Path.cpp  sharedTestCode.vcxproj
test/unitTests/: serviceTests.cpp  unitTests.cpp  unitTests.vcxproj  unitTests.vcxproj.filters
tests/googlemock/: googlemock.vcxproj
tests/googletest/: googletest.vcxproj  googletest.vcxproj.filters
tests/integrationTests/: controlDeviceObjectTests.cpp  driverInstallTests.cpp  integrationTests.cpp  integrationTests.vcxproj  integrationTests.vcxproj.filters  nullFsDriverEnvironment.cpp  nullFsDriverEnvironment.h  pathTests.cpp  sampleTest.cpp  volumeTests.cpp
tests/sharedCode/: Path.cpp  Path.h  Security.cpp  Security.h  Service.cpp  Service.h  sharedCode.vcxproj
tests/unitTests/: serviceTests.cpp  unitTests.vcxproj  unitTests.vcxproj.filters
